--- a/resources/stubs/sass/theme.scss
+++ b/resources/stubs/sass/theme.scss
@@ -1,4 +1,9 @@
-// Created by Pixney AB
+// Avviare
+// @author:             William Åström
+// @support & @issues:  https://github.com/pixney/avviare-extension/issues
+// @email:              william@pixney.com
+// @www:                pixney.com
+
 @import '~bootstrap/scss/functions';
 @import 'variables';
 @import '~bootstrap/scss/variables';
