--- a/resources/stubs/views/partials/assets.twig
+++ b/resources/stubs/views/partials/assets.twig
@@ -1,7 +1,4 @@
-{#
-    Main CSS can be found in metadata.twig
-#}
-
-{# Core Theme Components #}
+<div style="display:none">
+	{% include "theme::partials/svgs" %}
+</div>
 <script src="{{mix('js/app.js')}}"></script>
-
