--- a/resources/stubs/views/partials/footer.twig
+++ b/resources/stubs/views/partials/footer.twig
@@ -1,8 +1,4 @@
-<footer id="footer">
-    <div class="container text-center text-muted">
-
+<footer>
         {#&copy;{{ 'now'|date('Y') }} {{ setting_value('streams::name', 'Your Site') }}, All rights reserved.#}
         &copy;{{ 'now'|date('Y') }} Your Company, All rights reserved.
-
-    </div>
 </footer>
