--- a/resources/stubs/views/partials/header.twig
+++ b/resources/stubs/views/partials/header.twig
@@ -1,5 +1,18 @@
 <header>
-
-    {% include "theme::partials/navigation" %}
-
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <svg>
+                    <use xlink:href="#logo" />
+                </svg>
+            </div>
+            <div class="col-8 d-flex justify-content-end">
+                <button type="button" id="my-button">
+                    <svg>
+                        <use xlink:href="#menu" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
 </header>
