--- a/resources/stubs/sass/theme.scss
+++ b/resources/stubs/sass/theme.scss
@@ -12,3 +12,8 @@
 @import '~bootstrap/scss/reboot';
 @import '~bootstrap/scss/type';
 @import '~bootstrap/scss/grid';
+@import "~bootstrap/scss/utilities/display";
+@import "~bootstrap/scss/utilities/flex";
+@import "~bootstrap/scss/utilities/spacing";
+
+@import './theme/molecules/_messages';
