--- a/resources/stubs/views/partials/header.twig
+++ b/resources/stubs/views/partials/header.twig
@@ -2,13 +2,13 @@
     <div class="container">
         <div class="row">
             <div class="col-4">
-                <svg>
+                <svg class="a-logo">
                     <use xlink:href="#logo" />
                 </svg>
             </div>
             <div class="col-8 d-flex justify-content-end">
-                <button type="button" id="my-button">
-                    <svg>
+                <button type="button" id="my-button" class="a-menubutton">
+                    <svg class="a-menubutton__svg">
                         <use xlink:href="#menu" />
                     </svg>
                 </button>
