--- a/resources/stubs/views/partials/navigation.twig
+++ b/resources/stubs/views/partials/navigation.twig
@@ -2,7 +2,26 @@
 
 
 <nav id="my-menu">
-        Navigation
+        {{ structure()
+            .bootstrap4()
+            .listClass('nav navbar-nav')
+            .cache({'namespace': user().id ~ ':' ~ config('app.locale')})
+            .render()|raw }}
+
+            <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_route('anomaly.module.posts::posts.index') }}">Posts</a>
+                    </li>
+                    {% if auth_check() %}
+                        <li class="nav-item">
+                            <a href="{{ url_route('anomaly.module.users::logout') }}" class="nav-link btn btn-rounded btn-danger">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a href="{{ url_route('anomaly.module.users::login') }}?redirect={{ request_url() }}" class="nav-link btn btn-rounded btn-primary">Login</a>
+                        </li>
+                    {% endif %}
+                </ul>
             <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container">
                 
