--- a/resources/stubs/sass/theme.scss
+++ b/resources/stubs/sass/theme.scss
@@ -16,6 +16,12 @@
 @import "~bootstrap/scss/utilities/flex";
 @import "~bootstrap/scss/utilities/spacing";
 
+
+@import './theme/atoms/_header';
+@import './theme/atoms/_offside';
 @import './theme/atoms/_logo';
 @import './theme/atoms/_menubutton';
+@import './theme/atoms/_closeMenubutton';
 @import './theme/molecules/_messages';
+@import './theme/molecules/_breadcrumb';
+@import './theme/molecules/_navlist';
