--- a/resources/stubs/views/partials/header.twig
+++ b/resources/stubs/views/partials/header.twig
@@ -1,13 +1,15 @@
-<header>
+<header class="a-header">
     <div class="container">
         <div class="row">
             <div class="col-4">
-                <svg class="a-logo">
-                    <use xlink:href="#logo" />
-                </svg>
+                <a href="/">
+                    <svg class="a-logo">
+                        <use xlink:href="#logo" />
+                    </svg>
+                </a>
             </div>
             <div class="col-8 d-flex justify-content-end">
-                <button type="button" id="my-button" class="a-menubutton">
+                <button type="button"  class="a-menubutton">
                     <svg class="a-menubutton__svg">
                         <use xlink:href="#menu" />
                     </svg>
