--- a/resources/stubs/themes/tailwind/resources/views/layouts/default.twig
+++ b/resources/stubs/themes/tailwind/resources/views/layouts/default.twig
@@ -13,11 +13,13 @@
 
     <div class="container mx-auto">
         <div class="flex flex-wrap">
-            <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 mb-4 bg-gray-500">
-                <img src="https://source.unsplash.com/black" alt="">
+            <div class="w-full">
+                {% block content %}{% endblock %}
             </div>
         </div>
     </div>
+
+    {% include "theme::partials/footer" %}
 
     {# <script src="{{mix('js/app.js')}}"></script> #}
 </body>
