--- a/resources/stubs/themes/tailwind/resources/views/layouts/default.twig
+++ b/resources/stubs/themes/tailwind/resources/views/layouts/default.twig
@@ -9,6 +9,8 @@
 
     <div id="app">
         {% include "theme::partials/messages" %}
+        {% include "theme::partials/header" %}
+        {% include "theme::partials/breadcrumbs" %}
         <div class="container mx-auto">
             <div class="flex flex-wrap">
                 <div class="w-full">
